  * Support ISO and human readable time during search
  * Removed ckcd and added commands "ck cd" and "ck cdc" 
  * fixing print of correct host and port when changed via 'ck setup kernel --wfe'
  * adding support for 'pyperclip' to copy to clipboard

* V1.6.3
  * fixing debian source package name to python-ck

* V1.6.2 
  * fixing length in Debian changelog

* V1.6.1
  * fixing bug when calling kernel actions while current path is in some CK entry

* V1.6.0
  * changing version standard

* V1.5.0917
  * proper support for DEBIAN packages

* V1.5.0916
  * major move of 'repo' directory to 'ck' to support standard Python packaging
  * major improvement of setup.py to support standard Python packaging
  * fixing web interface paths to support standard Python packaging
  * supporting Conda packaging (Anaconda Scientific Python)
  * adding alias 'ls' for 'list' command (suggested by Anton)

* V1.4.0909
  * fixing a few typos
  * adding system function with timeout possibility
     (useful for research in computer engineering where
      generated code may be buggy and result in infinite loops,
      i.e. during autotuning or compiler testing and bug detection)
  * ck where repo:<name> will print URL for remote repositories
     (suggested by Anton)
  * making text to select UIDs less ambiguous (asked by Anton)
  * fixing bug in flatten_dict while working with CLSmith
  * changing COPYRIGHT to COPYRIGHT.txt and LICENSE to LICENSE.txt

* v1.3.0824
  * fixing bug with repository recaching (when pulling dependent repositories)

* v1.3.0821
  * added listing of all modules and their actions in user-friendly format
  * added support to zip CK repositories in format suitable for BitTorrent
    (to optimize exchange of large artifacts)
  * improved functionality to update repo descriptions 
    and manage dependencies on other shared repositories
  * fixed a few tiny bugs
  * added support to create an entry from a given directory (importing directories)