@@ -2,6 +2,7 @@
   * Removed ckcd and added commands "ck cd" and "ck cdc" 
   * fixing print of correct host and port when changed via 'ck setup kernel --wfe'
   * adding support for 'pyperclip' to copy to clipboard
+  * warn if more than one entry found when using 'cd' and 'cdc' commands 
 
 * V1.6.3
   * fixing debian source package name to python-ck
